@@ -837,13 +837,33 @@ class TestPrinting(unittest.TestCase):
         lines = ["UUID Box (uuid) @ (77, 638)",
                  "    UUID:  4a706754-6966-6645-7869-662d3e4a5032 (Exif)",
                  "    UUID Data:  ",
-                 "{'GPSInfo': {'GPSAltitude': 0.0,",
-                 "             'GPSAltitudeRef': 0,",
-                 "             'GPSDateStamp': '2013:02:09',",
-                 "             'GPSLatitude': [42.0, 20.0, 33.61],",
+                 "{'Image': {'Make': 'HTC',",
+                 "           'Model': 'HTC Glacier',",
+                 "           'XResolution': 72.0,",
+                 "           'YResolution': 72.0,",
+                 "           'ResolutionUnit': 2,",
+                 "           'YCbCrPositioning': 1,",
+                 "           'ExifTag': 138,",
+                 "           'GPSTag': 354},",
+                 " 'Photo': {'ISOSpeedRatings': 76,",
+                 "           'ExifVersion': (48, 50, 50, 48),",
+                 "           'DateTimeOriginal': '2013:02:09 14:47:53',",
+                 "           'DateTimeDigitized': '2013:02:09 14:47:53',",
+                 "           'ComponentsConfiguration': (1, 2, 3, 0),",
+                 "           'FocalLength': 3.53,",
+                 "           'FlashpixVersion': (48, 49, 48, 48),",
+                 "           'ColorSpace': 1,",
+                 "           'PixelXDimension': 2528,",
+                 "           'PixelYDimension': 1424,",
+                 "           'InteroperabilityTag': 324},",
+                 " 'GPSInfo': {'GPSVersionID': (2, 2, 0),",
                  "             'GPSLatitudeRef': 'N',",
-                 "             'GPSLongitude': [71.0, 5.0, 17.32],",
+                 "             'GPSLatitude': [42.0, 20.0, 33.61],",
                  "             'GPSLongitudeRef': 'W',",
+                 "             'GPSLongitude': [71.0, 5.0, 17.32],",
+                 "             'GPSAltitudeRef': 0,",
+                 "             'GPSAltitude': 0.0,",
+                 "             'GPSTimeStamp': [19.0, 47.0, 53.0],",
                  "             'GPSMapDatum': 'WGS-84',",
                  "             'GPSProcessingMethod': (65,",
                  "                                     83,",
@@ -860,28 +880,8 @@ class TestPrinting(unittest.TestCase):
                  "                                     79,",
                  "                                     82,",
                  "                                     75),",
-                 "             'GPSTimeStamp': [19.0, 47.0, 53.0],",
-                 "             'GPSVersionID': (2, 2, 0)},",
-                 " 'Image': {'ExifTag': 138,",
-                 "           'GPSTag': 354,",
-                 "           'Make': 'HTC',",
-                 "           'Model': 'HTC Glacier',",
-                 "           'ResolutionUnit': 2,",
-                 "           'XResolution': 72.0,",
-                 "           'YCbCrPositioning': 1,",
-                 "           'YResolution': 72.0},",
-                 " 'Iop': None,",
-                 " 'Photo': {'ColorSpace': 1,",
-                 "           'ComponentsConfiguration': (1, 2, 3, 0),",
-                 "           'DateTimeDigitized': '2013:02:09 14:47:53',",
-                 "           'DateTimeOriginal': '2013:02:09 14:47:53',",
-                 "           'ExifVersion': (48, 50, 50, 48),",
-                 "           'FlashpixVersion': (48, 49, 48, 48),",
-                 "           'FocalLength': 3.53,",
-                 "           'ISOSpeedRatings': 76,",
-                 "           'InteroperabilityTag': 324,",
-                 "           'PixelXDimension': 2528,",
-                 "           'PixelYDimension': 1424}}"]
+                 "             'GPSDateStamp': '2013:02:09'},",
+                 " 'Iop': None}"]
 
         expected = '\n'.join(lines)
 
