@@ -1,4 +1,7 @@
-Jun 11, 2013 - v0.1.8  Added reduce=-1 option to get lowest resolution
+Jun 15, 2013 - v0.1.9  Reading ICC profile headers.  Exif dictionaries changed
+    to ordered dicts.
+
+Jun 14, 2013 - v0.1.8  Added reduce=-1 option to get lowest resolution
     thumbnail.
 
 Jun 07, 2013 - v0.1.7  Changed Exif dictionary names from ['Exif', 'Photo',
